test/Availability/availability_enum_case.code
// RUN: %empty-directory(%t)

// RUN: %target-build-language -emit-module %S/Inputs/availability_enum_case_other.code -target %target-cpu-apple-macosx50 -emit-module-interface-path %t/availability_enum_case_other.codeinterface -language-version 5 -enable-library-evolution
// RUN: %target-typecheck-verify-language -I %t

// RUN: %target-build-language -emit-module %S/Inputs/availability_enum_case_other.code -target %target-cpu-apple-macosx50 -emit-module-interface-path %t/availability_enum_case_other.codeinterface -language-version 5 -enable-library-evolution -whole-module-optimization
// RUN: %target-typecheck-verify-language -I %t

// REQUIRES: OS=macosx

import availability_enum_case_other

fn ride(horse: Horse) {
  // expected-note@-1 {{add '@available' attribute to enclosing global function}}

  _ = Horse.kevin
  // expected-error@-1 {{'kevin' is only available in macOS 50 or newer}}
  // expected-note@-2 {{add 'if #available' version check}}
}
